# agroglobaldex

./: .gitignore  AGENTS.md  AUDIT_READINESS.md  AgroChain_App_Final.html  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  MAINNET.md  README.md  SECURITY.md  wrangler.jsonc
agrochain-electron/: REBUILD.md  main.js  package-lock.json  package.json  preload.js  release-notes.md
docs/: whitepaper-v0.1.md
legal/: 01-mica-analysis.md  02-asset-classification.md  03-permits-and-licenses.md  04-kyc-aml-framework.md  05-jurisdictional-strategy.md  06-terms-of-service.draft.md  07-privacy-policy.draft.md  08-white-paper-template.md  09-risk-disclosures.md  10-compliance-checklist.md  11-safe-template-pre-seed.md  README.md
marketing/: 01-ecosystem-research.md  02-target-list.md  03-pitch-deck-outline.md  04-outreach-templates.md  05-positioning-and-messaging.md  06-launch-plan-90days.md  07-metrics-and-kpis.md  README.md  cap-table-template.md  colosseum-submission.md  data-room-structure.md  demo-video-script.md  faq-investors.md  financials-5y.md  grant-applications.md  loi-templates.md  one-pager.md  outreach-vc-emails.md  pitch-deck-full.md  pitch-deck-to-figma-guide.md  solana-foundation-grant.md
mobile/: .gitignore  README.md  capacitor.config.ts  package.json
solana/: .gitignore  Anchor.toml  README.md  RUNBOOK.md  package-lock.json  package.json  tsconfig.json  tsconfig.seed.json
solana/programs/agroglobaldex/: Cargo.toml
solana/programs/agroglobaldex/src/: errors.rs  lib.rs  state.rs
solana/programs/agroglobaldex/src/instructions/: aggregate.rs  buy_asset.rs  buy_external_asset.rs  cancel_listing.rs  init_jurisdiction_policy.rs  initialize.rs  lending.rs  list_asset.rs  mint_token.rs  mod.rs  oracle.rs  redeem.rs  register_asset.rs  revoke_kyc.rs  set_compliance_signer.rs  set_lending_oracle_requirement.rs  set_paused.rs  settle_investment_offering.rs  transfer_issuer.rs  treasury_withdraw.rs  update_external_asset_handlers.rs  update_jurisdiction_policy.rs  update_kyc.rs  update_listing_price.rs  update_metadata.rs
solana/programs/compliance-hook/: Cargo.toml
solana/programs/compliance-hook/src/: lib.rs
web 2.0/: README.md  sw.js  (+13 more)
(+40 files in other folders)
