[package]
name = "agroglobaldex"
version = "0.1.0"
description = "AgroGlobalDex - Tokenized agricultural RWA marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agroglobaldex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
