[package]
name = "compliance_hook"
version = "0.1.0"
description = "AgroGlobalDex Token-2022 Transfer Hook enforcing KYC + jurisdiction policy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliance_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "token_2022_extensions"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
spl-discriminator = "0.4.0"
spl-pod = "0.5.0"
spl-type-length-value = "0.7.0"
